# PaperWise

./: .gitignore  README.md  docker-compose.yml  nginx.conf  quick-start.sh  redis.conf  start-paperwise.sh  test-system.sh
.cursor/: question-initial-solution.mdc
.cursor/rules/: problem-solving.mdc  professional-standards.mdc  python-standards.mdc  typescript-react.mdc
backend/: Dockerfile  env.example  pyproject.toml  requirements.txt
backend/agents/: methodology_agent.py
backend/app/: analysis_manager.py  config.py  job_state.py  main.py  worker.py
backend/app/agents/: base_agent.py  contextualization_agent.py  field_classifier_agent.py  orchestrator_agent.py  pdf_parser_agent.py  results_agent.py  section_registry.py  structured_section_extractor.py
backend/app/routers/: analyses.py  analysis.py
chrome-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
chrome-extension/icons/: README.md
docs/: README.md  chrome-extension-integration.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisCard.tsx  AnalysisResults.tsx  FileUpload.tsx  Header.tsx  SearchBar.tsx  StatsCard.tsx  StreamingAnalysisResults.tsx  UploadArea.tsx
frontend/src/pages/: AnalysisPage.tsx  Dashboard.tsx  PaperAnalysis.tsx
